[gd_scene load_steps=15 format=3 uid="uid://d2v0q4qkwy7y8"]

[ext_resource type="Script" path="res://Scripts/endgamecredits.gd" id="1_kwtmp"]
[ext_resource type="Texture2D" uid="uid://c474qlqq5ofv5" path="res://Graphics/Background/End/end_stars.png" id="2_2ump5"]
[ext_resource type="FontFile" uid="uid://bqryjkuqu52d6" path="res://Graphics/Styles/ethnocentric rg.otf" id="2_6wwy1"]
[ext_resource type="Texture2D" uid="uid://htf6tgt28in0" path="res://Graphics/PC/Main Ship - Base - Full health.png" id="3_7dk4n"]
[ext_resource type="Texture2D" uid="uid://dgx4ljnh0gb2b" path="res://Graphics/Background/End/end_planets_big.png" id="3_fk2ds"]
[ext_resource type="Texture2D" uid="uid://33ekudjllax5" path="res://Graphics/Background/End/end_planets.png" id="4_71apk"]
[ext_resource type="Texture2D" uid="uid://by3amx7jlh8fb" path="res://Graphics/Enemies/Kla'ed - Battlecruiser - Base.png" id="4_8366k"]
[ext_resource type="Texture2D" uid="uid://c5l6s07opokos" path="res://Graphics/Effects/base_shot.png" id="5_butko"]
[ext_resource type="Texture2D" uid="uid://mqfvouunkqje" path="res://Graphics/Background/End/end_dust.png" id="5_fje6e"]
[ext_resource type="PackedScene" uid="uid://dlqwixs38k8to" path="res://Scenes/Instances/button.tscn" id="10_2molc"]
[ext_resource type="Texture2D" uid="uid://daqi3buwr3tdh" path="res://Graphics/Effects/boss_1_shot.png" id="11_ssl4n"]

[sub_resource type="Animation" id="Animation_5l3wg"]
resource_name = "End_animation"
length = 120.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EndDust:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 120),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EndPlanets:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 59, 120),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, 12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EndPlanetsBig:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 40, 79, 120),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 6.28319, 12.5664, 18.8496]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_apa4w"]
_data = {
"End_animation": SubResource("Animation_5l3wg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcqoi"]
bg_color = Color(0.117647, 0.117647, 0.223529, 0.756863)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 6
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="Endgamecredits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kwtmp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_apa4w")
}
autoplay = "End_animation"

[node name="EndStars" type="Sprite2D" parent="."]
position = Vector2(300, 400)
texture = ExtResource("2_2ump5")

[node name="EndDust" type="Sprite2D" parent="."]
position = Vector2(320, 368)
scale = Vector2(1.25, 1.25)
texture = ExtResource("5_fje6e")

[node name="EndPlanets" type="Sprite2D" parent="."]
position = Vector2(280, 280)
texture = ExtResource("4_71apk")

[node name="EndPlanetsBig" type="Sprite2D" parent="."]
position = Vector2(288, 504)
texture = ExtResource("3_fk2ds")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 136.0
offset_right = 566.0
offset_bottom = 584.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bcqoi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 50
text = "Pixel Galaxy 
"
horizontal_alignment = 1

[node name="title2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 25
text = "- By Davy Shaegar -
"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
position = Vector2(58.0002, 234)
rotation = 1.5708
scale = Vector2(2, 2)
texture = ExtResource("3_7dk4n")

[node name="Sprite2D2" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
position = Vector2(442.038, 234)
rotation = 4.71239
texture = ExtResource("4_8366k")

[node name="Sprite2D3" type="Sprite2D" parent="PanelContainer/VBoxContainer"]
position = Vector2(138, 234)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_butko")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 2.73

[node name="EnemyCount" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 24
text = "Enemies Killed -"
horizontal_alignment = 1

[node name="EnemyCount2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 24
text = "Hits Taken -"
horizontal_alignment = 1

[node name="EnemyCount3" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 24
text = "Power-Ups Acquired - "
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="EnemyCount" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 30
text = "0/0"
horizontal_alignment = 1

[node name="HitsTaken" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="PowerupPickedUp" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="title3" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.0266667
anchor_right = 0.0266667
offset_left = 56.0
offset_top = 264.0
offset_right = 431.0
offset_bottom = 294.0
rotation = 0.136645
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_6wwy1")
theme_override_font_sizes/font_size = 24
text = "Thanks For Playing!
"
horizontal_alignment = 1

[node name="Button2" parent="." instance=ExtResource("10_2molc")]
layout_mode = 0
offset_left = 216.0
offset_top = 640.0
offset_right = 400.0
offset_bottom = 704.0
text = "Back to Menu"

[node name="Boss1Shot" type="Sprite2D" parent="."]
position = Vector2(376.038, 376)
rotation = 3.14159
scale = Vector2(0.275, 0.275)
texture = ExtResource("11_ssl4n")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
